[project]
dynamic = ["version"]
name="nd280-ml-reco"

dependencies = [
  "torch",
  "torch_geometric",
  "numpy",
  "matplotlib",
  "uproot",
  "pdg",
  "pandas",
  "awkward-pandas"
]

authors = [
  { name="Ewan Miller", email="emiller@ifae.es"}
]

maintainers = [
  { name="Ewan Miller", email="emiller@ifae.es"}
]

description = "Package for performing machine learning based reconstruction of particle tracks in the ND280 detector."

readme = "README.md"

