[project]
dynamic = ["version"]
name="nd280-ml-reco"

dependencies = [
  "numpy",
  "matplotlib",
  "uproot",
  "pdg",
  "pandas",
  "awkward-pandas",
  "torch<=2.5" #must be <=2.5 as this is what's supported by torch-cluster
]

authors = [
  { name="Ewan Miller", email="emiller@ifae.es"}
]

maintainers = [
  { name="Ewan Miller", email="emiller@ifae.es"}
]

description = "Package for performing machine learning based reconstruction of particle tracks in the ND280 detector."

readme = "README.md"

[project.optional-dependencies]

graph = [
  "torch-cluster",
  "torch_geometric"
]

[project.scripts]

make-dataset = "nd280mlreco:app.makedataset.run"
train-gnn = "nd280mlreco:app.traingnn.run"